# Data-Science-Work

./: pyproject.toml
Data_Visualization/Class 1 (7-Oct-23)/: IPLData.csv:Zone.Identifier  Session1.ipynb  code.ipynb  ipl_data_analysis.ipynb  olympics_data.ipynb  pandas_practise.ipynb
Data_Visualization/Class 10 (5-Nov-23)/: code.ipynb
Data_Visualization/Class 2 (8-Oct-23)/: Session 2.ipynb  code.ipynb
Data_Visualization/Class 3 (14-Oct-23)/: class_code.ipynb  code.ipynb
Data_Visualization/Class 4 (15-Oct-23)/: code.ipynb
Data_Visualization/Class 5 (21-Oct-23)/: code.ipynb
Data_Visualization/Class 6 (22-Oct-23)/: Session 6.ipynb  code.ipynb
Data_Visualization/Class 7 (28-Oct-23)/: Session 7.ipynb  code.ipynb
Data_Visualization/Class 8 (29-Oct-23)/: code.ipynb
Data_Visualization/Final_Exam/: Untitled.ipynb
Data_Visualization/hammad_question_2/: Final Paper Data Visualization.ipynb
Deep Learning/: file.ipynb
Deep Learning/Final_Exam/: Section_1_&_2.ipynb  Section_3_Solution.ipynb  Section_4_Solution.ipynb  Section_5_Solution.ipynb
Deep Learning/Linear Regression task/: archive.zip:Zone.Identifier  file.ipynb
Deep Learning/Mid_Term/: Task_1_Mid_Term_DeepLearning.ipynb  Task_2_Mid_Term_DeepLearning.ipynb
Generative_AI/LangChain/: .gitignore  chain_basics.py  chain_conditional.py  chain_parallel.py  chain_sequential.py  chat_model_conversation_user copy.py  chat_models_conversation.py  chat_models_starter.py  prompt_chain_of_thought.py  prompt_few_shot.py  prompt_instruction_based.py  prompt_role_based_shot.py  prompt_template_tuple.py
Generative_AI/final_exam/: final_exam_Ahmed_Naseem.ipynb
Machine_Learning/01_Linear_Regression_Single_Variable/: file.ipynb
Machine_Learning/02_Multivariate_Regression/: .gitignore  exercise_answer.ipynb  file.ipynb
Machine_Learning/03_Gradient_Descent_and_Cost_Function/: .gitignore  file.ipynb
Machine_Learning/05_Dummy_Variables_One_Hot_Encoding/: file.ipynb  (+1 more)
latest_ai_development/: report.md
(+44 files in other folders)
