[tool.poetry]
name = "Data_Science_Work"
version = "0.1.0"
description = ""
authors = ["ahmedcurious <ahmed_naseem1@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
numpy = "1.26.4"
requests = "^2.32.3"
matplotlib = "^3.9.1"
plotly = "^5.23.0"
seaborn = "^0.13.2"
tensorflow = "^2.17.0"
torch = "^2.4.0"
xgboost = "^2.1.1"
scikit-learn = "^1.5.1"
scrapy = "^2.11.2"
beautifulsoup4 = "^4.12.3"
poetry-jupyter-plugin = "^0.1.4"
jupyter = "^1.0.0"
word2number = "^1.1"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
