[tool.poetry]
name = "data_Science_Work"
version = "0.1.0"
description = ""
authors = ["ahmedcurious <ahmed_naseem1@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
numpy = "1.26.4"
requests = "^2.32.3"
matplotlib = "^3.9.1"
plotly = "^5.23.0"
seaborn = "^0.13.2"
tensorflow = "^2.17.0"
torch = "^2.4.0"
xgboost = "^2.1.1"
scikit-learn = "^1.5.1"
scrapy = "^2.11.2"
beautifulsoup4 = "^4.12.3"
poetry-jupyter-plugin = "^0.1.4"
jupyter = "^1.0.0"
word2number = "^1.1"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
tex = "^1.8"
nbconvert = "^7.16.4"
playwright = "^1.46.0"
keyring = "^24.0.1"
yolov10 = "^0.0.1"
pandas = "^2.2.2"
spacy = "^3.7.6"
nltk = "^3.9.1"
regex = "^2024.7.24"
kaggle = "^1.6.17"
flask = "^3.0.3"
flask-cors = "^5.0.0"
python-multipart = "^0.0.19"
openpyxl = "^3.1.5"
transformers = "^4.48.1"
tokenizers = "^0.21.0"
langchain = "^0.3.18"
python-dotenv = "^1.0.1"
langchain-core = "^0.3.35"
langchain-google-genai = "^2.0.9"
langchain-community = "^0.3.17"
google-auth = "^2.38.0"
google-generativeai = "^0.8.4"
tenacity = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
